# project1

./: Automaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Empty Automaton  ExactMatchAutomaton.cpp  ExactMatchAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  dockDockBuildParams.json  (+3 more)
Lab1PassOffCases_spring2021/__MACOSX/: ._Lab1PassOffCases
Lab1PassOffCases_spring2021/__MACOSX/Lab1PassOffCases/: ._1-70
Lab1PassOffCases_spring2021/__MACOSX/Lab1PassOffCases/1-100/: ._answer1.txt  ._answer2.txt  ._input1.txt  ._input2.txt
Lab1PassOffCases_spring2021/__MACOSX/Lab1PassOffCases/1-70/: ._answer1.txt  ._answer3.txt  ._answer4.txt  ._answer5.txt  ._answer6.txt  ._answer7.txt  ._answernoway.txt  ._input1.txt  ._input3.txt  ._input4.txt  ._input5.txt  ._input6.txt  ._input7.txt  ._inputnoway.txt
Lab1PassOffCases_spring2021/__MACOSX/Lab1PassOffCases/1-90/: ._answer1.txt  ._answer2.txt  ._answer3.txt  ._input1.txt  ._input2.txt  ._input3.txt
